--- a/grades_website.html
+++ b/grades_website.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<head>
+  <title>2024 Bahar Dönemi Notlarım — Özgür Polat Şahin</title>
+  <meta name="description" content="Üniversite derslerimin vize, final, bütünleme notları ve başarı durumları tablosu.">
+  …
+</head>
+
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
